# os_project

./: .gitignore  CMakeLists.txt  README.md
GLUI/: GL2DBase.h  GL2DButton.h  GL2DSlider.h  GL2DUtil.cpp  GL2DUtil.h
QT/: exitWindows.hpp  mainWindows.hpp
RobomasterCode/include/: Timer.h  angle_solver.h  armor_detector.h  headfiles.h  yolov5.h
RobomasterCode/src/: Timer.cpp  angle_solver.cpp  armor_detector.cpp  yolov5.cpp
include/: UI.hpp  project.h  semaphore.hpp  threadManager.hpp
model/model/: opt-0625-001.mapping  opt-0625-001.xml
src/: UI.cpp  main.cpp  semaphore.cpp  threadManager.cpp
xml_path/: armor_limited.xml  camera.xml  thread.xml
